--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
+    <!--meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
+    <!-- CSS -->
    
 
    <style>
@@ -214,7 +214,7 @@ body.no-scroll {
 </div>
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!--  <script type="text/javascript" src="common.js"></script> -->
+
 
   <script type="text/javascript">
   	
